# cs109b_groupproject

./: .gitignore  0X_tree_models.ipynb  404.html  CHANGELOG.rst  LICENSE  Pipfile  README.md  README.rst  analysis.html  changelog.html  cs109b.yml  genindex.html  index.html  introduction.html  modules.html  objects.inv  py-modindex.html  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
EDA/: 01b_embedding_autoencoder.ipynb  02_NYC_data_generator.ipynb  03_baseline_model.ipynb  04_trees_model_example.ipynb  EDA-Mark.ipynb  EDA-Mike.ipynb  Project_Success__EDA-master.ipynb
_sources/: index.rst.txt  introduction.rst.txt
_static/: documentation_options.js
deprecated/: cs109b.yml  requirements.yml
docs/: analysis.rst  conf.py  index.rst  introduction.rst  modules.rst
embeddings/: bert_embeddings.ipynb
figures/: bdgt_class_tree
notebooks/: 01_NYC_data_generator.ipynb  01_generate_data_splits.ipynb  02_NYC_data_generator.ipynb  02_bert_embedded_descriptions.ipynb  02a_bert_embeddings.ipynb  02a_kmeans_attribute_clusters.ipynb  02b_embedding_pca_autoencoder.ipynb  03_baseline_model.ipynb  03_kmeans_attribute_features.ipynb  03a_bert_embeddings.ipynb  03a_kmeans_attribute_clusters.ipynb  03b_embedding_pca_autoencoder.ipynb  03c_embedding_pca_autoencoder.ipynb  04_merge_final_features.ipynb  04_pca_autoencoder_features.ipynb  05_baseline_linear_models.ipynb  05_baseline_models.ipynb  06_linear_model.ipynb  06_merge_final_features.ipynb  06_smoothing_spline_models.ipynb  07_baseline_linear_models.ipynb  08_adaboost_models.ipynb  (+9 more)
(+51 files in other folders)
