[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
exclude = */migrations/*

[tool:pytest]
testpaths =
    tests
    caproj
    # manually add any additional package names if created
norecursedirs =
    migrations
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --cov=caproj
    # manually add --cov= any additional package names if created
    --cov-branch
    --pyargs
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[options]
setup_requires = setuptools_scm
